adding redis-server to travis test config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,17 @@
 language: rust
+
 rust:
   - stable
+
+cache: cargo
+
+addons:
+  apt:
+    packages:
+      - redis-server
+
+script:
+  - make test-all
+  - |
+    rustup component add rustfmt
+    cargo fmt --all -- --check
