comment out documentation url

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Greg Melton <gmelton@gmail.com>"]
 readme = "README.md"
 keywords = ["redis", "streams", "database"]
 repository = "https://github.com/grippy/redis-streams-rs.git"
-documentation = ""
+# documentation = ""
 categories = []
 license = "MIT"
 edition = "2018"
